--- a/tailwind/custom/base.css
+++ b/tailwind/custom/base.css
@@ -44,6 +44,7 @@ body {
 
 .hero{
 	@apply w-full h-[90vh] relative flex flex-col items-center justify-center z-0 xl:h-screen;
+
 	.hero__video-wrapper {
 		@apply absolute top-0 left-0 w-full h-[90vh] xl:h-screen overflow-hidden z-0;
 	}
@@ -111,11 +112,11 @@ body {
 }
 .page:not(.home) {
 	.hero {
-		@apply w-full h-[80vh] relative items-start xl:h-[61.55vh];
+		@apply w-full h-[80vh] relative items-start;
 		.hero__image {
 			@apply absolute inset-0 z-0;
 			img {
-				@apply w-full h-[80vh] object-cover object-center xl:h-[61.55vh];
+				@apply w-full h-[80vh] object-cover object-center;
 			}
 		}
 		.hero__content{
@@ -130,6 +131,37 @@ body {
 				@apply ml-0;
 			}
 			
+		}
+	}
+}
+
+.page-template-page-what-we-do{
+	.hero{
+		&::after {
+			@apply hidden;
+
+		}
+	}
+}
+
+.page-template-page-seo-php {
+	.hero {
+		@apply h-[80vh] xl:h-[80vh]!;
+		.hero__content {
+			@apply text-right!;
+
+			h2 {
+				@apply mr-0 ml-auto! text-white;
+			}
+			.hero--button {
+				@apply mr-0 ml-auto!;
+			}
+		}
+		
+		.hero__image {
+			img {
+				@apply h-[80vh]!; 
+			}
 		}
 	}
 }
@@ -149,14 +181,21 @@ body {
 	}
 }
 
+
 .company {
 	@apply relative max-2xl:px-4 pt-26;
 	.company__container{
 		@apply lg:flex lg:justify-between lg:gap-10 
 		xl:gap-26 xl:container xl:mx-auto
 		2xl:px-4;
+		> * {
+			@apply flex-1;
+		}
+		h1 {
+			@apply text-[clamp(1rem,6vw,1.875rem)] leading-8 text-black my-5 font-bold;
+		}
 	}
-		
+	
 	&.company--active {
 		 .company__label-pop {
 			@apply opacity-100 scale-100;	
@@ -183,7 +222,14 @@ body {
 		}
 	}
 	.company__header {
-		@apply py-16;
+					
+		.company__description {
+			p {
+				&:first-of-type {
+					@apply text-2xl leading-8;
+				}
+			}
+		}
 	}
 	.company__title {
 		@apply font-secondary font-normal text-[clamp(2.5rem,6vw,2.82rem)] overflow-hidden opacity-0 leading-12;
@@ -224,12 +270,13 @@ body.home {
 		@apply mt-2;
 	}
 	.services__header {
-		@apply flex flex-col items-center mx-auto text-center 
+		@apply flex flex-col items-center mx-auto text-center relative 
 		md:flex-row md:justify-between;
 		.services__heading {
 			@apply mx-auto flex flex-col
 			md:mr-auto md:ml-0 lg:mx-auto
 		}
+		
 	}
 	.services__name {
 		@apply bg-black w-full rounded-full font-semibold text-sm my-0 text-white px-6 py-3 leading-normal flex items-center justify-center
@@ -239,7 +286,7 @@ body.home {
 		@apply pt-6 text-[#919191];
 	}
 	.services__cta {
-		@apply max-md:mx-auto self-start md:self-auto;
+		@apply absolute right-0 top-3.5 max-md:mx-auto self-start md:self-auto;
 	}
 	.services__list {
 		@apply grid grid-cols-1 gap-8 pt-10
@@ -249,13 +296,23 @@ body.home {
 		@apply border-t-[1px] border-[#717171] pb-0 mt-auto cursor-pointer;
 	}
 }
+.page-template-page-seo {
+	.services {
+		@apply pb-16
+	}
+}
 
 .home {
 	.quote {
 		@apply px-0;
 	}
 }
-
+.page-template-page-seo {
+	.quote {
+		@apply px-0;
+		
+	}
+}
 .quote {
 	@apply px-4 pt-16;
 	.quote__viusual {
@@ -317,7 +374,7 @@ body.home {
 }
 
 .cza {
-	@apply relative px-4 -top-96 pt-16 xl:pt-0;
+	@apply relative px-4 -top-96 pt-16;
 	.cza__container {
 		@apply xl:container xl:mx-auto
 	}
@@ -347,7 +404,7 @@ body.home {
 		}
 		&.cza__block--intro {
 			.cza__header {
-				@apply 2xl:pl-36
+				@apply xl:pl-36
 			}
 		}
 		&.cza__block--experience {
@@ -493,7 +550,7 @@ body.home {
 		@apply xl:container xl:mx-auto xl:flex;
 	}	
 	.promo__content {
-		@apply bg-tertiary px-4 py-8 xl:px-20 xl:py-10 xl:w-1/2;
+		@apply flex flex-col justify-center bg-tertiary px-4 py-8 xl:px-20 xl:py-10 xl:w-1/2;
 		h2, h3, h4, h5, h6 {
 			@apply text-white font-bold my-0 mb-6 text-3xl;
 		}
@@ -515,10 +572,18 @@ body.home {
 	}
 }
 
-.parent-pageid-24 {
+.parent-pageid-24,
+.page-template-page-seo {
 	.promo {
-		@apply top-0 pt-24
-	};
+		@apply top-0 pt-24;
+		
+	}	
+
+}
+.page-template-page-seo {
+	.promo {
+		@apply bg-tertiary;		
+	}
 }
 
 .scroll-carousel {
@@ -599,7 +664,6 @@ body.home {
 		@apply -top-54
 	}
 }
-
 
 .content {
 	@apply relative -top-22 px-4 ;
@@ -1289,4 +1353,22 @@ section.image-columns > div > div h2:after {
 
 .project-carousel__nav svg {
   	@apply w-6 h-6 fill-foreground;
+}
+
+
+.cza-section {	
+	.cza-section__container {
+		@apply flex flex-col px-4 py-16 xl:container xl:mx-auto xl:flex-row;
+		> * {
+			@apply flex-1;
+		}
+		.cza-steps-list {
+			@apply grid gap-16 grid-cols-1 md:grid-cols-2 xl:grid-cols-3;
+			p {
+				&:first-of-type {
+					@apply text-2xl leading-8;
+				}
+			}
+		}
+	}
 }
