--- a/tailwind/custom/base.css
+++ b/tailwind/custom/base.css
@@ -367,6 +367,12 @@ body.home {
 	}
 }
 
+.page-template-page-seo {
+	.quote {
+		@apply pt-0;
+	}
+}
+
 .home {
 	.quote {
 		.quote__content {
@@ -586,6 +592,12 @@ body.home {
 			@apply text-white text-lg leading-8;
 			&:last-of-type {
 				@apply pb-8;
+			}
+		}
+		ul {
+			@apply text-white pb-8;
+			li {
+				@apply pb-4 leading-8 text-lg;
 			}
 		}
 		.promo__cta {
@@ -1419,7 +1431,7 @@ section.image-columns > div > div h2:after {
 	.cza-section__container {
 		@apply flex flex-col px-4 pt-32 pb-24 xl:container xl:mx-auto;
 		.cza-main-text {
-			@apply text-center pb-16;
+			@apply text-center;
 			
 		}
 		> * {
@@ -1477,24 +1489,31 @@ section.image-columns > div > div h2:after {
 		}
 	}
 	.seo__list_item { 
-		@apply flex flex-col xl:flex-row items-center justify-center;
+		@apply flex flex-col items-center! justify-center
+		xl:flex-row xl:items-stretch;
 		.cza__content-block {
-			@apply flex flex-col w-full md:w-1/2;
+			@apply flex flex-col justify-center w-full h-full md:w-1/2;
+			.cza__content-inner {
+				@apply py-16 xl:py-20 xl:px-20;
+			}
 			&.cza__content-block--text {
-				@apply text-lg font-normal leading-8 text-foreground py-16 xl:py-20 xl:px-20;
+				@apply text-lg font-normal leading-8 text-foreground;
 			}
 			&.cza__content-block--image {
-				@apply xl:pl-0!;
+				@apply h-full xl:pl-0!;
 			}
 			h3 {
 				@apply text-[#2F292B] font-normal text-2xl;
 			}
 			img {
-				@apply object-cover w-full xl:h-[82vh];
+				@apply object-cover w-full h-full;
 				clip-path: polygon(0 0, 100% 0, 100% calc(100% - 5em), calc(100% - 5em) 100%, 0 100%);
 			}
 			p {
 				@apply text-lg font-normal leading-8;
+				&:last-child {
+					@apply pb-0;
+				}
 			}
 			ul {
 				@apply pl-0;
@@ -1511,7 +1530,9 @@ section.image-columns > div > div h2:after {
 		&:nth-child(even){
 			@apply xl:flex-row-reverse;
 			.cza__content-block {
-				@apply xl:pl-20 xl:pr-20;
+				.cza__content-inner {
+					@apply py-16 xl:py-20 xl:px-20;
+				}
 				img {
 					clip-path: polygon(0 0, 100% 0, 100% 100%, 5em 100%, 0 calc(100% - 5em));
 				}
@@ -1523,7 +1544,7 @@ section.image-columns > div > div h2:after {
 		}
 	}
 	.seo__cta_item {
-		@apply bg-tertiary text-white flex-col! px-10 pt-8 pb-16 w-fit xl:px-42 xl:w-1/2;
+		@apply bg-tertiary text-white flex flex-col justify-center px-10 pt-8 pb-16 w-fit xl:px-42 xl:w-1/2;
 		clip-path: polygon(0 0, 100% 0, 100% calc(100% - 5em), calc(100% - 5em) 100%, 0 100%);
 		.seo__cta_item-title {
 			@apply font-normal text-5xl text-white leading-16!;
